# macro1

./: .env_template  dashboard_qt.py  macro1@.service  pyproject.toml  run.sh  run_task.py  run_worker.py
benchmark/android_lab/: eval.py  macro1_auto_test.py  macro1_executor.py
benchmark/android_lab/configs/: coloragent_template.yaml  macro1_template.yaml
benchmark/android_world/: macro1_agent.py  macro1_environment.py  run.py
configs/: coloragent.yaml  macro1.yaml  qwen3_agent.yaml
macro1/: __init__.py  action.py  webui.py
macro1/agents/: __init__.py  agent_qwen.py  agent_react.py  base.py  hierarchical_agent.py  multi_agent.py  sub_agent.py
macro1/default_prompts/: __init__.py  answer_agent.yaml  answer_agent_qwen.yaml  global_reflector.yaml  new_reflector.yaml  note_taker.yaml  operator.yaml  operator_qwen.yaml  planner.yaml  progressor.yaml  prompt_type.py  qwen3_agent.yaml  qwen_agent.yaml  react_agent.yaml  reflector.yaml  task_classifier.yaml  task_extractor.yaml  task_orchestrator.yaml  task_rewriter.yaml  trained_answer_agent.yaml  trained_operator.yaml  trajectory_reflector.yaml
macro1/environment/: __init__.py  mobile_environ.py
macro1/schema/: __init__.py  config.py  schema.py
macro1/utils/: __init__.py  constants.py  logger.py  utils.py  vlm.py
macro1/utils/rag/: main.py
mobile_use/: action.py  environ.py  webui.py
mobile_use/agents/: agent_react.py
plans/: architecture.md  sample_jobs.json
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_environment.py  test_schema.py  test_utils.py  test_vlm.py
(+5 files in other folders)
